[package]
name = "reverse_content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"]}
dotenvy = "0.15.7"
tokio-stream = "0.1"
urlencoding = "2.1.3"
base64 = "0.22.1"
